--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     * Date Started: Feb. 10, 2017
     * Date Last Updated: Feb. 10, 2017
     * Amount of time spent coding: 2 hours
+    * Github: https://github.com/masonziedonis/coding-challenges/tree/clover
     *
     * Description: This is my file for the initial coding challenge portion of Clover's intership interview process. I had two hours to complete the challenge.
     *
@@ -26,13 +27,17 @@ body {
     margin: 0;
     color: white;
 }
+#controlMenu {
+    z-index: 100;
+    position: absolute;
+    width: 100%;
+}
 #circleContainer {
     position: absolute;
     right: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
 }
 
 
