--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     z-index: 100;
     position: absolute;
     width: 100%;
+    height: 100%;
 }
 #circleContainer {
     position: absolute;
@@ -43,36 +44,51 @@ body {
 
 /* Buttons */
 button {
-    width: 20%;
-    margin: 0 40%;
-    padding: 15px;
+    position: absolute;
     box-sizing: border-box;
     background-color: white;
-    border: 1px solid black;
+    border: 2rem double black;
     color: #111;
-    border-radius: 0;
+    border-radius: 15px;
+    font-size: 1.85rem;
+    width: 40%;
+    margin: 1rem 30%;
+    padding: 1rem;
+    bottom: 1rem;
+    height: 20%;
 }
 #generateCircle {
     background-color: darkgreen;
     margin-top: 1rem;
+    top: 0;
 }
 #clearAllCircles {
     background-color: darkred;
-    margin-top: 0;
+    margin-top: 0;    
 }
 
 /* Forms */
 form {
     text-align: center;
     padding: 1rem 0;
-    margin-bottom: 0;
+    font-size: 1.5rem;
+    font-style: italic;
+    width: 50%;
+    margin: 0 25%;
+    top: 50%;
+    position: absolute;
 }
 form label {
     padding-right: 0.5rem;
+    width: 40%;
 }
 form input {
-    width: width: 40%;
-    padding: 5px 0;
+    width: 45%;
+    background: #111;
+    color: white;
+    border: 1px solid white;
+    padding: 1.15rem;
+    font-size: 2.5rem;
 }
 
 /* Objects */
